--- a/TODO
+++ b/TODO
@@ -2,7 +2,7 @@
 
 Todo:
     ☐ detect prestige and reset state or reload (e.g. upgrade fatigue stays disabled) @low
-    ☐ REALLY figure out proper CPS, buildings aren't being bought on ascension @high
+    ✔ REALLY figure out proper CPS, buildings aren't being bought on ascension @high @done(22-01-17 15:21)
     ☐ building: include price in buy decision, 2 buildings with roughly the same cpsPriceRatio should buy the cheaper one @high
     ☐ offline tactics: leave wrinklers on in the evening, turn on golden switch at say 8pm
     ☐ reincarnate optimization - buying too many early buildings
